[package]
name = "wedding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
clap = { version = "4.0.29", features = ["derive", "env"] }
log = "0.4.17"
tokio = { version = "1.22.0", features = ["full"] }
tower-http = { version = "0.3.4", features = ["fs", "trace"] }
tracing-subscriber = "0.3.16"
