[package]
name = "wedding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.11.1"
axum = { version = "0.6.1", features = ["form"] }
axum-login = "0.4.1"
clap = { version = "4.0.29", features = ["derive", "env"] }
log = "0.4.17"
rand = { version = "0.8.5", features = ["min_const_gen"] }
serde = { version = "1.0.150", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["fs", "trace"] }
tracing-subscriber = "0.3.16"
